add contact form

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title : DataSwarm
 tagline: Simplify bigdata analytics
 author :
   name : DataSwarm
-  email : dataswarm@gmail.com
+  email : viktor.manuel.garcia@gmail.com
   twitter : username
   feedburner : feedname
 
