--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ title : DataSwarm
 tagline: Bigdata analytics
 author :
   name : DataSwarm
-  email : viktor.manuel.garcia@gmail.com
+  email : dataswarm.team@gmail.com
   twitter : g_vmanuel
   feedburner : feedname
 
@@ -100,17 +100,10 @@ JB :
   analytics :
     provider : google_universal
     google_classic : 
-        tracking_id : 'UA-45176241-2'
+        tracking_id : 'UA-65309354-1'
     google_universal : 
-        tracking_id : 'UA-45176241-2'
-        domain : 'zeppelin-project.com'
-    getclicky :
-      site_id : 
-    mixpanel :
-        token : '_MIXPANEL_TOKEN_'
-    piwik :
-        baseURL : 'myserver.tld/piwik' # Piwik installation address (without protocol)
-        idsite : '1'                   # the id of the site on Piwik
+        tracking_id : 'UA-65309354-1'
+        domain : 'dataswarm.io'
 
   # Settings for sharing helper. 
   # Sharing is for things like tweet, plusone, like, reddit buttons etc.
